--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,12 +1,8 @@
 # Cloud Server Dependencies for Face Recognition Computation Offloading
+# 简化版 - 不需要 GPU 和图形界面
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 python-multipart==0.0.6
-numpy==1.24.3
-opencv-python-headless==4.8.1.78
-tensorflow==2.14.0
-mediapipe==0.10.8
-faiss-cpu==1.7.4
-pydantic==2.5.2
-Pillow==10.1.0
-
+numpy>=1.24.0
+Pillow>=10.0.0
+pydantic>=2.0.0
